--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+header {
+  position: relative;
+}
+
+header::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0%;
+  width: 0;
+  height: 1px;
+  transition: all 400ms ease-in-out;
+  background: rgba(255, 255, 255, 0.3);
+
+  animation: headerAnimation 3s linear forwards;
+}
+
+@keyframes headerAnimation {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.profile {
+  animation: scaleImage 10s infinite alternate;
+}
+
+@keyframes scaleImage {
+  0% {
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.4);
+  }
+
+  50% {
+    box-shadow: 0 0 10px 5px rgba(0, 255, 255, 0.4);
+  }
+
+  100% {
+    box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.4);
+  }
+}
+
+
