refactor: adding conditional to know if current route belongs to link in LinkNavigation component and adding animation of menuMobile in globals.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,3 +61,17 @@ header::after {
     font-size: 1.3rem;
   }
 }
+
+
+.menu__mobile {
+  animation: MenuAnimation 1s ease-in-out forwards;
+}
+
+@keyframes MenuAnimation {
+  from {
+    right: -100%;
+  }
+  to {
+    right: 0;
+  }
+}
