--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,8 @@ header::after {
   width: 0;
   height: 1px;
   transition: all 400ms ease-in-out;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: rgba(200, 200, 222, 0.2) 0px 7px 29px 0px;
 
   animation: headerAnimation 3s linear forwards;
 }
@@ -36,7 +37,6 @@ header::after {
     width: 100%;
   }
 }
-
 
 @media (min-width: 640px) {
   th {
